--- a/style.css
+++ b/style.css
@@ -84,8 +84,30 @@ body{
     text-decoration: none;
     font-weight: 600;
     letter-spacing: 1;
+    z-index: 1;
+    overflow: hidden;
 }
 .btn-box a:nth-child(2){
     background: transparent;
     color: #00abf0;
+}
+.btn-box a:nth-child(2){
+    color: #081b29;
+}
+.btn-box a:nth-child(2)::before{
+    background: #00abf0;
+}
+.btn-box a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #081b29;
+    z-index: -1;
+    transition: 0.5s;
+}
+.btn-box a:hover::before{
+    width: 100%;
 }
