--- a/style.css
+++ b/style.css
@@ -86,6 +86,20 @@ body{
     letter-spacing: 1px;
     z-index: 1;
     overflow: hidden;
+    transition: 0.5s;
+}
+.btn-box a:hover{
+    color: #00abf0;
+}
+.btn-box a:nth-child(2){
+    background: transparent;
+    color: #00abf0;
+}
+.btn-box a:nth-child(2):hover{
+    color: #081b29;
+}
+.btn-box a:nth-child(2)::before{
+    background: #00abf0;
 }
 .btn-box a::before{
     content: '';
@@ -97,4 +111,27 @@ body{
     background: #081b29;    
     z-index: -1;
     transition: 0.5s;
+} 
+.btn-box a:hover::before{
+    width: 100%;
+}
+.home-sci{
+    position: absolute;
+    bottom: 40px;
+    width: 170px;
+    /* background: red; */
+    display: flex;
+    justify-content: space-between;
+}
+.home-sci a{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #00abf0;
+    border-radius: 50%;
+    text-decoration: none;
 }
